--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
-  "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended", "prettier/react"],
-  "plugins": ["prettier"],
+  "extends": ["react-app", "react-app/jest", "prettier"],
+  "plugins": ["prettier", "@babel"],
   "rules": {
     "prettier/prettier": ["error", {"singleQuote": true}]
   },
@@ -8,7 +8,6 @@
     "browser": true,
     "node": true,
     "es6": true
-  },
-  "parser": "babel-eslint"
-
+  }
+  // "parser": "babel-eslint"
 }
